--- a/index.css
+++ b/index.css
@@ -13,14 +13,16 @@ body {
     color: var(--orange);
     font-family: 'Finger Paint', cursive;
     overflow: hidden;
+    
 }
 h1 {
     font-size: 54px;
     text-transform: uppercase;
+    padding: 10px;
 }
 
 .container {
-    padding: 40px;
+    padding: 60px;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -66,6 +68,7 @@ h1 {
     border-bottom: none;
 } 
 button {
+    margin:auto;
     padding: 10px 20px;
     border-radius: 10px;
     background-color: var(--orange);
@@ -79,7 +82,6 @@ button:hover {
     cursor: pointer;
     transform: translateY(-2px);
 }
-
 
 .foot{
     font-size: 15PX;
